refactor: 优化文章对象映射和版本管理实现
- ArticleStructMapper 新增 copyForNewVersion 方法用于版本复制
- ArticleCommandServiceImpl 使用 MapStruct 替代手动对象字段复制
- ArticleVersionServiceImpl 优化代码结构，使用现代 Java 语法
- 提升代码可维护性和类型安全性